--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,69 @@
 * {
-    background-color: #309958;
-    font-family: 'Courier New', Courier, monospace;
+  background-color: #309958;
+  font-family: "Courier New", Courier, monospace;
 }
 h3,
 h2,
-h1{font-weight: bold;}
 h1 {
-    padding: 5px;
-    font-size: 200%;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+h1 {
+  padding: 5px;
+  font-size: 200%;
+  font-weight: bold;
+  font-family: "Courier New", Courier, monospace;
 }
 h2 {
-    font-size: 150%;
-    padding: 5px;
-    margin: 10px 0 ;
-    font-family: 'Courier New', Courier, monospace;
+  font-size: 150%;
+  padding: 5px;
+  margin: 10px 0;
+  font-family: "Courier New", Courier, monospace;
 }
 h3 {
-    margin: 5px 0 ;
-    padding: 5px;
-    font-size: 125%;
-    font-family: 'Courier New', Courier, monospace;
+  margin: 5px 0;
+  padding: 5px;
+  font-size: 125%;
+  font-family: "Courier New", Courier, monospace;
 }
 p {
-
-    padding: 10px;
-    margin: 6px -61px;
-    font-size: 125%;
-    color: black;
-    display: inline-block;
-    font-weight: bold;
-
+  padding: 10px;
+  margin: 6px -61px;
+  font-size: 125%;
+  color: black;
+  display: inline-block;
+  font-weight: bold;
 }
 main {
-
-    width: 30%;
-    margin-left: 35%;
+  width: 30%;
+  margin-left: 35%;
 }
 hr {
-    background-color:#138b6f;
-    margin: 20px;
+  background-color: #138b6f;
+  margin: 20px;
 }
 ol {
-    font-weight:bold;
-    list-style: upper-roman;
+  font-weight: bold;
+  list-style: upper-roman;
 }
 ul {
-    font-weight:bold;
-    list-style: outside;
+  list-style: outside;
+  font-weight: bold;
 }
 .lists {
-    margin: 8%;
-    /* text-align: start; */
-font-family: 'Courier New', Courier, monospace;
-font-size: 1.5rem;
+  margin: 8%;
+  /* text-align: start; */
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.5rem;
 }
 li {
-    margin: 10px;
+  margin: 10px;
 }
 footer {
-    text-align: center;
-    font-weight: bolder;
+  text-align: center;
+  font-weight: bolder;
 }
 h5 {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 /* body{
     -webkit-transform: scale(0.75);
